@@ -11,5 +11,3 @@
 #
 # So, a valid entry would look like:
 #   "D2760001240101010001000006550000	moritz"
-
-D2760001240101010001000006550000	moritz
